k8s/immich/05-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-services
  namespace: immich
  labels:
    app: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
        - name: immich-postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:bcf63357191b76a916ae5eb93464d65c07511da41e3bf7a8416db519b40b1c23
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: immich-database-storage

        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3
          ports:
            - containerPort: 2283
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: immich-server-storage

        - name: immich-redis
          image: docker.io/valkey/valkey:9@sha256:4963247afc4cd33c7d3b2d2816b9f7f8eeebab148d29056c2ca4d7cbc966f2d9
          livenessProbe:
            exec:
              command:
                - redis-cli ping || exit 1

        - name: tailscale
          image: ghcr.io/tailscale/tailscale:latest
          volumeMounts:
            - name: tailscale-state
              mountPath: /var/lib/tailscale
            - name: tailscale-config
              mountPath: /etc/tailscale

      volumes:
        - name: tailscale-config
          configMap:
            name: tailscale-config
        - name: tailscale-state
          persistentVolumeClaim:
            claimName: tailscale-state-claim
        - name: immich-server-storage
          persistentVolumeClaim:
            claimName: pvc-immich-photos
        - name: immich-database-storage
          persistentVolumeClaim:
            claimName: pvc-immich-db

      serviceAccountName: immich

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      nodeSelector:
        nvidia.com/gpu.present: "true"
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v3
          volumeMounts:
            - mountPath: /cache
              name: model-cache
      restartPolicy: Always
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: model-cache
